--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -12,6 +12,7 @@
     "Support Center": "",
     "Customer Support": "",
     "ADDRESS": "ADRESSE",
+    "Company":"Société",
     "Press": "Press",
     "Careers & Culture": "Careers & Culture",
     "Language": "Langues",
