add contenu projet + mentions

--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -7,7 +7,7 @@
     "Contact": "Contactez-nous",
     "Do you have any question regarding the project? Feel free to reach out.": "Vous portez un projet qui cherche à insuffler une dynamique d'innovation sociale pour les territoires ?",
     "Let's Chat": "Contactez-nous",
-    "Application Security": "Mentions",
+    "Application Security": "Mentions légales",
     "Software Principles": "Conditions générales d'utilisation",
     "Support Center": "",
     "Customer Support": "",
