features email + carousel projet opacity 1

--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -26,6 +26,7 @@
     "Your Name": "Votre nom",
     "Email" : "Email",
     "Your Email": "Votre email",
-    "Blog":"Blog"
+    "Blog":"Blog",
+    "Objet":"Objet"
   }
   
