--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -1,32 +1,31 @@
 {
-    "About": "La foncière",
-    "Policy": "Mentions légales",
-    "Mission": "Notre stratégie d'investissement",
-    "Product": "L'incubateur",
-    "Tell us everything": "Vous voulez utiliser une de nos solutions innovantes ?",
-    "Contact": "Contactez-nous",
-    "Do you have any question regarding the project? Feel free to reach out.": "Vous portez un projet qui cherche à insuffler une dynamique d'innovation sociale pour les territoires ?",
-    "Let's Chat": "Contactez-nous",
-    "Application Security": "Mentions légales",
-    "Software Principles": "Conditions générales d'utilisation",
-    "Support Center": "",
-    "Customer Support": "",
-    "ADDRESS": "ADRESSE",
-    "Company":"Société",
-    "Press": "Press",
-    "Careers & Culture": "Careers & Culture",
-    "Language": "Langues",
-    "Explore": "En savoir plus",
-    "Learn More": "Learn More",
-    "Get Started": "Get Started",
-    "Submit": "Envoyer",
-    "Message" : "Message",
-    "Your Message": "Votre message",
-    "Name" : "Nom",
-    "Your Name": "Votre nom",
-    "Email" : "Email",
-    "Your Email": "Votre email",
-    "Blog":"Blog",
-    "Objet":"Objet"
-  }
-  
+  "About": "Les origines",
+  "Policy": "Mentions légales",
+  "Mission": "Notre stratégie d'investissement",
+  "Product": "L'incubateur",
+  "Tell us everything": "Vous voulez utiliser une de nos solutions innovantes ?",
+  "Contact": "Contactez-nous",
+  "Do you have any question regarding the project? Feel free to reach out.": "Vous portez un projet qui cherche à insuffler une dynamique d'innovation sociale pour les territoires ?",
+  "Let's Chat": "Contactez-nous",
+  "Application Security": "Mentions légales",
+  "Software Principles": "Conditions générales d'utilisation",
+  "Support Center": "",
+  "Customer Support": "",
+  "ADDRESS": "ADRESSE",
+  "Company": "Société",
+  "Press": "Press",
+  "Careers & Culture": "Careers & Culture",
+  "Language": "Langues",
+  "Explore": "En savoir plus",
+  "Learn More": "Learn More",
+  "Get Started": "Get Started",
+  "Submit": "Envoyer",
+  "Message": "Message",
+  "Your Message": "Votre message",
+  "Name": "Nom",
+  "Your Name": "Votre nom",
+  "Email": "Email",
+  "Your Email": "Votre email",
+  "Blog": "Blog",
+  "Objet": "Objet"
+}
